unpackaged/main/default/objects/abacus__Accounting_Review__c/abacus__Accounting_Review__c.object-meta.xml
<CustomObject>
    <description>Represents a change in accounting data. If you've enabled Changes Only Batch Mode, only records with associated Accounting Reviews will be processed by Accounting Subledger. Accounting Reviews will be generated automatically as your data changes, and deleted after they are successfully processed.</description>
    <label>Accounting Review</label>
    <nameField>
        <displayFormat>AR-{000000000}</displayFormat>
        <label>Accounting Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>