unpackaged/main/default/objects/abacus__Accounting_Review__c/fields/abacus__Reason__c.field-meta.xml
<CustomField>
    <fullName>abacus__Reason__c</fullName>
    <description>The reason this record has been flagged for review and processing by Accounting Subledger.</description>
    <inlineHelpText>The reason this record has been flagged for review and processing by Accounting Subledger.</inlineHelpText>
    <label>Reason</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>