unpackaged/main/default/objects/abacus__Accounting_Review__c/fields/abacus__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>abacus__Related_Record_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The record that will be processed when the accounting batch is run.</description>
    <externalId>true</externalId>
    <inlineHelpText>This record will be processed by the accounting batch, because it has been flagged by an Accounting Review</inlineHelpText>
    <label>Related Record Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>